--- a/src/CSS/Connections.css
+++ b/src/CSS/Connections.css
@@ -3,8 +3,8 @@
 }
 .swiper-grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  /* gap: 10px; */
   overflow: hidden;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .swiper-slide {
-  width: 100%;
+  width: 80%;
   height: 100%;
   display: flex;
   justify-content: center;
